# settings-manager

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  db.rs  main.rs
frontend/src-tauri/src/providers/: gitlab.rs  mod.rs
frontend/src/components/: AddProjectModal.jsx  AddSourceModal.jsx  EditGitlabVariableModal.jsx  LogsPage.jsx  ProjectList.jsx  VariableValueEditorModal.jsx
frontend/src/lib/: api.js  codeEditor.js  useModalClose.js
src/: App.css  App.jsx  App.tsx  main.tsx  types.ts
src-tauri/src/: db.rs  main.rs
src-tauri/src/providers/: lambda.rs
src/components/: AddProjectModal.tsx  AddSourceModal.jsx  AddSourceModal.tsx  EditGitlabVariableModal.jsx  LogsPage.tsx  ProjectList.jsx  VariableEditor.jsx  VariableEditor.tsx
src/lib/: api.ts  codeEditor.ts  logger.js  logger.ts  useModalClose.js  useModalClose.ts  variables.js  variables.ts
